--- a/package.json
+++ b/package.json
@@ -7,36 +7,14 @@
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@tippy.js/react": "^2.2.2",
-    "alias-fields": "^1.0.0",
-    "array-to-object-keys": "^1.3.4",
-    "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
     "debug": "^4.1.1",
-    "filter-nil": "^1.0.0",
     "fork-awesome": "^1.1.7",
-    "has-content": "^1.1.0",
-    "history": "^4.9.0",
-    "immer": "^3.2.0",
     "lodash": "^4.17.15",
-    "magina": "^1.1.0",
     "modern-normalize": "^0.5.0",
-    "moment": "^2.24.0",
-    "query-string": "^6.8.2",
     "react": "^16.8.6",
-    "react-autosuggest": "^9.4.3",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.8.6",
-    "react-fader": "^3.1.0",
-    "react-ga": "^2.6.0",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
-    "react-router-scroll-top": "^0.2.1",
-    "react-router-transition-switch": "^1.1.1",
-    "react-string-replace": "^0.4.4",
-    "redux": "^4.0.4",
-    "redux-action": "^1.2.2",
-    "title-case": "^2.1.1"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@absolunet/fsp": "^1.6.1",
