--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fork-awesome": "^1.1.7",
     "lodash": "^4.17.15",
     "modern-normalize": "^0.5.0",
+    "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6"
