--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-google-font-loader": "^1.0.5"
   },
   "devDependencies": {
     "@absolunet/fsp": "^1.6.1",
