--- a/src/components/App/fonts.yml
+++ b/src/components/App/fonts.yml
@@ -1,8 +1,28 @@
 fonts:
   - font: Jura
     weights: [300, 400, 500, 600, 700]
-  - font: Ubuntu
-    weights: [300, 300i, 400, 400i, 500, 500i, 700, 700i]
+  - font: Montserrat
+    weights:
+      [
+        100,
+        100i,
+        200,
+        200i,
+        300,
+        300i,
+        400,
+        400i,
+        500,
+        500i,
+        600,
+        600i,
+        700,
+        700i,
+        800,
+        800i,
+        900,
+        900i,
+      ]
 subsets:
   - cyrillic
   - cyrillic-ext
