--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.9.0",
     "react-google-font-loader": "^1.0.5",
+    "react-qr-svg": "^2.2.1",
     "react-string-replace": "^0.4.4"
   },
   "devDependencies": {
