--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
     "build:dev": "NODE_ENV=development webpack",
     "prepareActionJest": "npm run build:prod"
   },
-  "name": "twitch-panel-html"
+  "name": "twitch-panel-html",
+  "description": "Uses HTML and CSS to render TwitchTV panels."
 }
