--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.12.0",
     "react-google-font-loader": "^1.1.0",
+    "react-modern-picture": "^1.0.0",
     "react-qr-svg": "^2.2.1",
     "react-string-replace": "^0.4.4"
   },
